--- a/src/main/webapp/static/css/phone-detail.css
+++ b/src/main/webapp/static/css/phone-detail.css
@@ -26,10 +26,21 @@
 
 
 #myCarousel{
-    margin-top:50px;
-    margin-left: 50px;
-    height: 400px;
-    width: 400px;
+    background: #fff;
+    margin-top:20px;
+    margin-left: 20px;
+    height: 450px;
+    width: 450px;
+}
+#myCarousel a{
+    background: #fff;
+
+}
+
+
+
+.myCarousel-inner{
+    width: 450px;
 }
 
 /* .phone_name{
