项目初代版本基本完成

--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -208,6 +208,17 @@
     height: 58px;
 }
 
+.multiPage{
+    font-size:16px;
+    position: absolute;
+    top: 15px;;
+    right: 0;
+}
+.multiPage a{
+    text-decoration: none;
+}
+
+
 .phone-type .b{
     position: relative;
     width: 1270px;
